# ViceEngine

./: GenerateProjectFiles.bat  GenerateProjectFiles.sh  LICENSE  README.md
Assets/: README.md
Assets/Materials/: Crate.mat  Default.mat  KGirl.mat  KGirl_Toon.mat  Mutant.mat  Pedestal.mat  SciFi_Floor.mat  Skybox.mat  Spaceship.mat  Toon.mat
Assets/Models/: Crate.mdl  Cube.mdl  KGirl.mdl  Mutant.mdl  Pedestal.mdl  Plane.mdl  SciFi_Floor.mdl  Spaceship.mdl
Assets/Scenes/: Default.scn  SciFi.scn
Assets/Shaders/OpenGL/: BlinnPhong.frag  BlinnPhong.vert  BlinnPhongWithTextures.frag  Skybox.frag  Skybox.vert  Toon.frag  (+1 more)
Source/: CMakeLists.txt
Source/Engine/: CMakeLists.txt  EntryPoint.cpp
Source/Engine/ApplicationCore/: CMakeLists.txt  Messages.h
Source/Engine/ApplicationCore/GenericPlatform/: GenericApplication.cpp  GenericApplication.h  GenericApplicationMessageHandler.h  GenericPlatformApplication.h  GenericWindow.h
Source/Engine/ApplicationCore/HAL/: PlatformApplication.h
Source/Engine/ApplicationCore/Windows/: WindowsApplication.cpp  WindowsApplication.h  WindowsPlatformApplication.cpp  WindowsPlatformApplication.h  WindowsWindow.cpp  WindowsWindow.h
Source/Engine/Core/: AssertionMacros.h  CMakeLists.txt  CoreGlobals.h  CoreMinimal.h
Source/Engine/Core/Containers/: Array.h  KeyOperationsPolicyBase.h  Map.h  Set.h
Source/Engine/Core/GenericPlatform/: GenericPlatform.h  GenericPlatformFileSystem.h  GenericPlatformTime.h
Source/Engine/Core/HAL/: Platform.h  PlatformFileSystem.h  PlatformTime.h  PreprocessorHelpers.h
Source/Engine/Core/Hash/: Crc64.cpp  Crc64.h  PrimitiveTypeHash.h
Source/Engine/Core/Mac/: MacPlatform.cpp  MacPlatform.h
Source/Engine/Core/Math/: Color.h  MathUtilities.cpp  MathUtilities.h  Matrix4D.h  Transform4D.h  Vector2D.h  Vector3D.h  Vector4D.h
Source/Engine/Core/Math/Scalar/: Color.cpp  Color.h  Matrix4D.cpp  Matrix4D.h  Transform4D.cpp  Transform4D.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h  Vector4D.cpp  Vector4D.h
Source/Engine/Core/Memory/: Alignment.h  AlignmentUtilities.h  ArenaAllocator.cpp  ArenaAllocator.h  IAllocator.h  MemoryManager.cpp  MemoryManager.h  NewDeleteAllocator.h
Source/Engine/Core/Module/: DefaultModule.h  IModule.h  ModuleMacros.h  ModuleManager.cpp  ModuleManager.h
Source/Engine/Core/SmartPointers/: ControlBlock.h  SharedPtr.h  UniquePtr.h  WeakPtr.h
Source/Engine/Core/Strings/: String.h  StringId.cpp  StringId.h  StringIdRegistry.h
Source/Engine/Core/Templates/: TemplateFunctionLibrary.h
Source/Engine/Core/Templates/TypeTraits/: AndOrNot.h  AreTypesEqual.h  CallTraits.h  Identity.h  IsArithmeticType.h  IsConstType.h  IsDefaultConstructable.h  IsLValueReferenceType.h  IsPODType.h  IsPointerType.h  IsRValueReferenceType.h  IsTriviallyDestructable.h  RemoveReference.h  TRValueToLValueReference.h
Source/Engine/Core/Windows/: WindowsPlatform.cpp  WindowsPlatform.h  WindowsPlatformFileSystem.cpp  WindowsPlatformFileSystem.h  WindowsPlatformTime.cpp  WindowsPlatformTime.h
Source/Engine/EngineCore/: CMakeLists.txt  Engine.cpp  Engine.h
Source/Engine/EngineCore/GenericPlatform/: GenericPlatformEntryPoint.h
Source/Engine/EngineCore/HAL/: PlatformEntryPoint.h
Source/Engine/EngineCore/Windows/: WindowsPlatformEntryPoint.h
Source/Engine/GameCore/: CMakeLists.txt  Game.h
Source/Engine/InputCore/: CMakeLists.txt  Events.h  Keys.cpp  Keys.h
Source/Engine/InputCore/GenericPlatform/: GenericPlatformInput.h
Source/Engine/InputCore/HAL/: PlatformInput.h
Source/Engine/InputCore/Windows/: WindowsPlatformInput.cpp  WindowsPlatformInput.h
Source/Engine/Renderer/: CMakeLists.txt  ForwardRenderer.cpp  ForwardRenderer.h  RenderManager.cpp  RenderManager.h  Renderer.cpp  Renderer.h  RendererFileSystem.cpp  RendererFileSystem.h  Viewport.h
Source/Engine/Renderer/Camera/: Camera.cpp  Camera.h  Frustum.cpp  Frustum.h
Source/Engine/Renderer/Geometry/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelFile.cpp  ModelFile.h  WavefrontObj.cpp  WavefrontObj.h
Source/Engine/Renderer/Lights/: DirectionalLight.cpp  DirectionalLight.h  PointLight.cpp  PointLight.h
Source/Engine/Renderer/Materials/: Material.cpp  Material.h  MaterialFile.cpp  MaterialFile.h  MaterialRegistry.h
Source/Engine/Renderer/RHI/: Cubemap.h  FrameBuffer.h  Pipeline.h  RHI.h  RHIDefinitions.h  Shader.h  Texture2D.h  TextureRegistry.h  VertexArray.h  VertexFormats.h
Source/Engine/Renderer/RHI/OpenGL/: Cubemap.cpp  Cubemap.h  FrameBuffer.cpp  FrameBuffer.h  OpenGLApi.h  Pipeline.cpp  Pipeline.h  RHI.cpp  RHI.h  RHIDefinitions.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  VertexArray.h
Source/Engine/Renderer/RHI/OpenGL/GenericPlatform/: GenericPlatformOpenGL.h
Source/Engine/Renderer/RHI/OpenGL/HAL/: PlatformOpenGL.h
Source/Engine/Renderer/RHI/OpenGL/Windows/: WindowsPlatformOpenGL.cpp  WindowsPlatformOpenGL.h
Source/Engine/Renderer/Scene/: Scene.cpp  Scene.h  SceneFile.cpp  SceneFile.h  Skybox.cpp  Skybox.h
Source/Engine/SceneEditor/: CMakeLists.txt  SceneEditor.cpp  SceneEditor.h
Source/Engine/SceneEditor/Camera/: CameraController.cpp  CameraController.h
Source/Engine/SceneEditor/UI/: InspectorUI.cpp  InspectorUI.h  OutlinerUI.cpp  OutlinerUI.h  SceneUI.cpp  SceneUI.h
Source/Engine/SceneEditor/UI/ImGui/: ImGuiUtilities.cpp  ImGuiUtilities.h
Source/Engine/SceneEditor/UI/ImGui/GenericPlatform/: GenericPlatformImGui.h
Source/Engine/SceneEditor/UI/ImGui/HAL/: PlatformImGui.h
Source/Engine/SceneEditor/UI/ImGui/RHI/: ImGuiRHI.h
Source/Engine/SceneEditor/UI/ImGui/RHI/OpenGL/: ImGuiRHI.cpp  ImGuiRHI.h
Source/Engine/SceneEditor/UI/ImGui/Windows/: WindowsPlatformImGui.cpp  WindowsPlatformImGui.h
Source/Engine/ViceApplication/: CMakeLists.txt  ViceApplication.cpp  ViceApplication.h
Source/Test/: ANSIStringTests.cpp  ArenaAllocatorTests.cpp  ArrayTests.cpp  CMakeLists.txt  MapTests.cpp  MathUtilitiesTests.cpp  SetTests.cpp  SharedPtrTests.cpp  StringIdTests.cpp  Transform4DTests.cpp  UniquePtrTests.cpp  Vector2DTests.cpp  Vector3DTests.cpp  Vector4DTests.cpp  WeakPtrTests.cpp
